Replace MusContextFactory::renderer_settings_ with a ResourceSettings

viz::RendererSettings is a privileged class. MusContextFactory should not own
one because it is a client not a host. Replace |renderer_settings_| with
|resource_settings_| for it is all a ContextFactory needs.
Bug: 748699
Change-Id: Ib1e453650ac77aeb796b57e76e06d18a20226401